fix: global overflow

--- a/app/globals.css
+++ b/app/globals.css
@@ -170,6 +170,7 @@
   }
   body {
     font-family: var(--font-dm-sans);
+    overflow-x: clip;
   }
   h1,
   h2,
